--- a/des.html
+++ b/des.html
@@ -84,10 +84,10 @@
       gap: 8px;
     }
 
-    .pink-card    { background: linear-gradient(135deg, #ff5ec3, #d24cb0); }
-    .orange-card  { background: linear-gradient(135deg, #faae42, #e38c00); }
-    .blue-card    { background: linear-gradient(135deg, #00bbf9, #009bd6); }
-    .purple-card  { background: linear-gradient(135deg, #c77dff, #9e4fd9); }
+    .pink-card    { background: linear-gradient(238deg, #d3bcca, #60595e); }
+    .orange-card  { background: linear-gradient(5deg, #00205b, #818181); }
+    .blue-card    { background: linear-gradient(5deg, #00205b, #818181); }
+    .purple-card  { background: linear-gradient(358deg, #eb1c1c, #818181); }
 
     .content {
       flex: 1;
