--- a/des.html
+++ b/des.html
@@ -156,7 +156,7 @@
     }
   
     .btn-acao {
-      background: linear-gradient(135deg, #00bbf9, #009bd6);
+      background: linear-gradient(135deg, #00205b, #009bd6);
       border: none;
       padding: 6px 10px;
       border-radius: 6px;
