--- a/des.html
+++ b/des.html
@@ -255,7 +255,7 @@
     <label>Valor Negociado (R$)</label>
     <input type="number" id="valorNegociado" style="width:100%;padding:8px;margin-bottom:10px;border:none;border-radius:6px;">
     <div style="text-align:right;">
-      <button onclick="salvarPopup()" style="background:#00bbf9;color:white;padding:8px 16px;border-radius:8px;border:none;cursor:pointer;">Salvar</button>
+      <button onclick="salvarPopup()" style="background:#00205b;color:white;padding:8px 16px;border-radius:8px;border:none;cursor:pointer;">Salvar</button>
       <button onclick="fecharPopup()" style="background:#444;color:white;padding:8px 16px;border-radius:8px;border:none;cursor:pointer;margin-left:10px;">Cancelar</button>
     </div>
   </div>
@@ -326,7 +326,7 @@
           <td>${d.horimetro || "-"}</td>
           <td>${d.telefone || "-"}</td>
           <td>${d.observacoes || "-"}</td>
-          <td>${(d.checklist || []).map(item => `<span style="background:#00bbf9; color:#fff; padding:3px 8px; border-radius:5px; margin:2px; display:inline-block; font-size:12px">${item}</span>`).join("")}</td>
+          <td>${(d.checklist || []).map(item => `<span style="background:#00205b; color:#fff; padding:3px 8px; border-radius:5px; margin:2px; display:inline-block; font-size:12px">${item}</span>`).join("")}</td>
           <td class="acoes"><button class="btn-acao" data-id="${d.id}" title="Abrir ações">➕</button></td>
         </tr>`;
     });
