--- a/des.html
+++ b/des.html
@@ -127,8 +127,8 @@
     }
 
     th {
-      background-color: #2c2f3f;
-      color: #cca700;
+      background-color: #fffff;
+      color: #00205b;
     }
 
     .acoes button {
