--- a/des.html
+++ b/des.html
@@ -145,9 +145,9 @@
       background: #ffffff;
     }
 
-    .status-em-andamento { background-color: rgba(248, 230, 197, 0.15); }
-    .status-concluido { background-color: rgba(99, 151, 248, 0.1); }
-    .status-cancelado { background-color: rgba(255, 0, 0, 0.1); }
+    .status-em-andamento { background-color: rgba(212, 129, 0,); }
+    .status-concluido { background-color: rgba(3, 80 ,225 / 44%); }
+    .status-cancelado { background-color: rgba(114, 108, 108 / 82%); }
 
     @media (max-width: 768px) {
       .sidebar { display: none; }
