--- a/des.html
+++ b/des.html
@@ -145,9 +145,9 @@
       background: #ffffff;
     }
 
-    .status-em-andamento { background-color: rgba(212, 129, 0,); }
-    .status-concluido { background-color: rgba(3, 80 ,225 / 44%); }
-    .status-cancelado { background-color: rgba(114, 108, 108 / 82%); }
+    .status-em-andamento { background-color: #c67903; }
+    .status-concluido { background-color: #193b7c; }
+    .status-cancelado { background-color: #626262; }
 
     @media (max-width: 768px) {
       .sidebar { display: none; }
