--- a/des.html
+++ b/des.html
@@ -84,8 +84,8 @@
       gap: 8px;
     }
 
-    .pink-card    { background: linear-gradient(238deg, #d3bcca, #60595e); }
-    .orange-card  { background: linear-gradient(5deg, #00205b, #818181); }
+    .pink-card    { background: linear-gradient(238deg, #193b7c, #193b7c00); }
+    .orange-card  { background: linear-gradient(238deg, #193b7c, #193b7c00); }
     .blue-card    { background: linear-gradient(5deg, #00205b, #818181); }
     .purple-card  { background: linear-gradient(358deg, #eb1c1c, #818181); }
 
